--- a/main.css
+++ b/main.css
@@ -54,50 +54,54 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
+}
+
+.left-side{
+    font-size: 25px;
 }
 .bottom-right{
     display: flex;
     background-color: aliceblue;
-    width: 20vw;
+    width: 24vw;
     padding: 20px;
     border-radius: 3px;
     align-items: center;
 }
+
+main h1{
+    margin-top: 40px;
+    margin-left: 50px;
+}
 /*Search bar*/
-.search-container {
-    position: relative;
+
+.search-form {
+    display: none;
 }
 
-.search-btn {
-    padding: 5px;
-    border: none;
-    background-color: #2196f3;
-    border-radius: 2px;
-    cursor: pointer;
-    color: #fff;
+.search-form.active {
+    display: flex;
+    align-items: center;
+    width: 30vw;
 }
 
-.search-bar {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 0;
-    padding: 10px;
-    border: none;
-    border-radius: 2px;
-    transition: width 0.3s ease-in-out;
-    color: #fff;
-    
-}
-
-.search-bar:focus {
-    width: 200px;
-}
 /*Mid-Section*/
+
+h2{
+    margin-left: 50px;
+    margin-top: 30px;
+}
+.btn{
+    margin-right: 90px;
+}
 .mid-section{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.lefty{
+    margin-top: 30px;
 }
 
 .righty{
@@ -105,13 +109,13 @@ header{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin-right: 90px;
+    margin-right: 160px;
 }
 
 .rows{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: flex-start;
 }
 
@@ -120,7 +124,12 @@ header{
 }
 
 .icon-tab{
-    margin: 5px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-weight: bold;
+    font-size: larger;
+    margin: 40px;
 }
 
 .icon{
@@ -132,8 +141,8 @@ header{
     border-radius: 2px;
     box-sizing: border-box;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 40px;
-    margin: 40px 40px 2px 40px;
+    padding: 20px;
+    margin: 40px 40px 10px 40px;
     height: auto;
 }
 
@@ -165,8 +174,24 @@ header{
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
-   
+    margin-top: 30px;
 }
+
+.card-side{
+    background-color: #c8c8c8;
+}
+
+.card-side h2{
+    margin-top: 30px;
+    margin-left: 50px;
+}
+
+.top{
+    display: flex;
+    flex-direction: row;
+
+}
+
 
 /*Third*/
 
@@ -249,7 +274,7 @@ span {
 
 form {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 20px;
+    padding: 50px;
     margin-bottom: 60px;
     border-radius: 5px;
     margin: 20px;
@@ -265,7 +290,6 @@ form #h5 {
     display: grid;
     grid-template-columns: auto auto auto;
     border-radius: 5px;
-    background-color: #f2f2f2;
     padding: 20px;
     box-sizing: border-box;
 }
@@ -278,11 +302,11 @@ label {
 input,
 select {
     margin: 8px, 0px;
-    padding: 12px, 2px;
+    padding: 12px;
     width: 80%;
-    height: 30px;
+    height: 50px;
     display: inline-block;
-    border: 1px, solid, #ccc;
+    background-color: #d5d5d5;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 16px;
@@ -302,7 +326,7 @@ select option {
 }
 
 textarea {
-    width: 95%;
+    width: 99%;
     height: 150px;
     font-size: 16px;
     padding-left: 10px;
@@ -314,10 +338,11 @@ textarea {
 
 #photo {
     border: 3px solid #F4511E;
+    border-radius: 3px;
     border-style: dashed;
     text-align: center;
-    /* width: 80%; */
     margin: 10px;
+    padding: 30px;
 }
 
 form #btndiv {
